kubernetes/simple-static-site/yml/namespace-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-dev
  labels:
    environment: development
    application: hello
