kubernetes/simple-static-site/yml/namespace-prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: static-prod
  labels:
    environment: production
    application: static
