kubernetes/simple-static-site/yml/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  labels:
    application: static
spec:
  replicas: 3
  selector:
    matchLabels:
      application: static
  template:
    metadata:
      labels:
        application: static
    spec:
      containers:
        - name: static
          image: staticsite:local
          ports:
            - containerPort: 80
