kubernetes/simple-static-site/yml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  labels:
    application: static
spec:
  selector:
    application: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
