kubernetes/simple-static-site/yml/ingress-dev.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /dev
            backend:
              serviceName: hello-service
              servicePort: 80
